# off-grid-mobile-ai

./: .eslintrc.js  App.tsx  CLAUDE.md  README.md  jest.setup.ts  package.json  sonar-project.properties
.github/workflows/: pages.yml
.husky/: pre-commit
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  mnn_engine_native.cpp
docs/: ARCHITECTURE.md
docs/standards/: CODEBASE_GUIDE.md
ios/: CoreMLDiffusionModule.swift  DownloadManagerModule.m  DownloadManagerModule.swift
ios/OffgridMobile/: AppDelegate.swift  Info.plist  OffgridMobile-Bridging-Header.h
ios/OffgridMobileTests/: OffgridMobileTests.swift
src/components/: AppSheet.tsx
src/constants/: models.ts
src/hooks/: useTextGenerationAdvanced.ts
src/navigation/: AppNavigator.tsx  types.ts
src/screens/: ChatsListScreen.tsx  DownloadLogsScreen.tsx  DownloadManagerScreen.tsx  KnowledgeBaseScreen.styles.ts  KnowledgeBaseScreen.tsx  ModelDownloadScreen.tsx  OnboardingScreen.tsx  ProjectDetailKnowledgeBaseSection.tsx  ProjectDetailScreen.tsx  RemoteServersScreen.tsx  SettingsScreen.tsx  index.ts
src/services/: backgroundDownloadService.ts  downloadLogService.ts  generationService.ts  generationServiceHelpers.ts  generationToolLoop.ts  httpClient.ts  huggingface.ts  imageGenerationService.ts  llm.ts  llmHelpers.ts  llmToolGeneration.ts  localDreamGenerator.ts  networkDiscovery.ts  remoteServerManager.ts  remoteServerManagerUtils.ts
src/stores/: appStore.ts  chatStore.ts  remoteServerStore.ts
website/: CNAME  _config.yml  index.md  llms.txt  quick-start.md  robots.txt  vision.md
(+90 files in other folders)
